Added logging, refactored exceptions